# klangwellen-umfeld-examples

./: .gitignore  .gitmodules  README.md
examples/01.Wavetable/: CMakeLists.txt  application.cpp
examples/02.ADSR/: CMakeLists.txt  application.cpp
examples/13.Vocoder/: CMakeLists.txt  application.cpp
examples/18.LoadSample/: CMakeLists.txt  application.cpp
examples/analyzing-signal-energy/: CMakeLists.txt  analyzing-signal-energy.cpp
examples/attic/butterworth-bandpass-filter/: butterworth-bandpass-filter.cpp
examples/attic/simple-example/: simple-example.cpp
examples/butterworth-bandpass-filter/: CMakeLists.txt  butterworth-bandpass-filter.cpp
examples/fft-libraries/: CMakeLists.txt  fft-libraries.cpp  fft_adapter.c  fft_adapter.h
examples/fft-libraries/libraries/cmsis_dsp/: README.md
examples/pitch-shift/: CMakeLists.txt  pitch-shift.cpp  smbPitchShift.cpp  smbPitchShift.h
examples/simple-example/: CMakeLists.txt  simple-example.cpp
examples/template/: CMakeLists.txt  application.cpp
simple-example/: CMakeLists.txt
